--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,21 @@
 }
 
 
+.help {
+	background-color: #999999;
+	padding: 4px;
+	width: 20px;
+	height: 20px;
+	display: inline-block;
+	font-weight: bold;
+	color: #eeeeee;
+	position: relative;
+	bottom: 1px;
+	border-radius: 20px;
+	cursor: pointer;
+}
+
+
 #deck {
 	height:		300px;
 	list-style:	none;
@@ -383,6 +398,31 @@ span.category:hover {
 	color: #cccccc;
 	font-size: 50%;
 }
+
+
+#help-container {
+	-moz-box-shadow:    -1px -1px 25px #888;
+	-webkit-box-shadow: -1px -1px 25px #888;
+	box-shadow:         -1px -1px 25px #888;
+
+	border-radius: 11px;
+	position:fixed;
+	bottom:0%;
+	right:0%;
+	color: #000000;
+	background:#eeeeee;
+	margin-bottom:5px;
+	width:390px;
+	opacity:0.9;
+	padding:30px;
+	z-index: 2000;
+}
+
+
+#help-container td {
+	text-align: left;
+}
+
 
 
 
