Added morse code flashcards.

--- a/styles/style.css
+++ b/styles/style.css
@@ -387,7 +387,7 @@ span.category:hover {
 
 .quiz-note {
 	font-family: Helvetica, sans serif;
-	font-size: 50%;
+	font-size: 10pt;
 	color: #00aa00;
 	font-weight: bold;
 }
