--- a/styles/style.css
+++ b/styles/style.css
@@ -428,4 +428,17 @@ span.category:hover {
 
 
 
+div#dropZone {
+  background: gray;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  opacity: 0.6;
+  visibility: hidden;
+}
+
+
 
